data/derived/comb/progs/unify/prog3413.ml.out
Characters 29-54:
  let fixpoint (f,b) = wwhile (f (if ((f b) = b) then b), b);;
                               ^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type unit but an expression was expected of type
         'a -> 'a * bool
